# edugraph-backend

./: README.md  pyproject.toml
app/: main.py
app/models/: graph.py  topics.py
app/routes/: graph.py  upload.py
app/services/: chat.py  graph.py  nlp.py  pdf_parser.py  s3.py
